--- a/_data/public-works.yml
+++ b/_data/public-works.yml
@@ -2,7 +2,8 @@
   group-description: Total customer-initiated service requests and the percentage of those service requests that were resolved within the SWS's target timeframes
   charts:
   - title: All Customer Service Requests (All Solid Waste)
-    description: Total customer-initiated service requests and the percentage of those service requests that were resolved within the SWS' target timeframes
+    summary: Total customer-initiated service requests and the percentage of those service requests that were resolved within the SWS' target timeframes
+    description: 
     size: full
     department: DPW
     datasource: solid_waste_customer_service
@@ -17,7 +18,8 @@
     series2-label: Resolved Within Target Timeframe
 
   - title: Bin Delivery and Pickup Service Requests
-    description: Total customer-initiated bin delivery and pickup service requests and the percentage of those service requests that were resolved within the SWS' target timeframes
+    summary: Total customer-initiated bin delivery and pickup service requests and the percentage of those service requests that were resolved within the SWS' target timeframes
+    description: 
     size: half
     department: DPW
     datasource: solid_waste_bin
@@ -32,7 +34,8 @@
     series2-label: Resolved Within Target Timeframe
 
   - title: Illegal Dumping Service Requests
-    description: Total customer-initiated illegal dumping service requests and the percentage of those service requests that were resolved within the SWS' target timeframes
+    summary: Total customer-initiated illegal dumping service requests and the percentage of those service requests that were resolved within the SWS' target timeframes
+    description: 
     size: half
     department: DPW
     datasource: solid_waste_dumping
@@ -47,7 +50,8 @@
     series2-label: Resolved Within Target Timeframe
 
   - title: Missed Collections Service Requests
-    description: Total customer-initiated missed collections service requests and the percentage of those service requests that were resolved within the SWS' target timeframes
+    summary: Total customer-initiated missed collections service requests and the percentage of those service requests that were resolved within the SWS' target timeframes
+    description: 
     size: full
     department: DPW
     datasource: solid_waste_missed_collections
@@ -65,7 +69,8 @@
   group-description:
   charts:
   - title: Garbage, recycling and yard waste collected on schedule
-    description: The percentage of garbage, recycling and yard wste pickups that are collected on schedule
+    summary: The percentage of garbage, recycling and yard wste pickups that are collected on schedule
+    description: 
     size: full
     department: DPW
     datasource: solid_waste_operations
@@ -79,7 +84,8 @@
   group-description: Total customer-initiated service requests and the percentage of those service requests that were resolved within the OOT's target timeframes
   charts:
     - title: All Customer Service Requests (All Solid Waste)
-      description: Total customer-initiated service requests and the percentage of those service requests that were resolved within the OOT's target timeframes
+      summary: Total customer-initiated service requests and the percentage of those service requests that were resolved within the OOT's target timeframes
+      description: 
       size: full
       department: DPW
       datasource: transportation_customer_service
@@ -93,7 +99,8 @@
       series2-format: percentage
       series2-label: Resolved Within Target Timeframe
     - title: Asphalt and Street Repair Service Requests
-      description: Total customer-initiated asphalt and street repair service requests and the percentage of those service requests that were resolved within the OOT's target timeframes
+      summary: Total customer-initiated asphalt and street repair service requests and the percentage of those service requests that were resolved within the OOT's target timeframes
+      description: 
       size: half
       department: DPW
       datasource: transportation_asphalt
@@ -107,7 +114,8 @@
       series2-format: percentage
       series2-label: Resolved Within Target Timeframe
     - title: Concrete Repair Service Requests
-      description: Total customer-initiated concrete repair service requests and the percentage of those service requests that were resolved within the OOT's target timeframes
+      summary: Total customer-initiated concrete repair service requests and the percentage of those service requests that were resolved within the OOT's target timeframes
+      description: 
       size: half
       department: DPW
       datasource: transportation_concrete
@@ -121,8 +129,10 @@
       series2-format: percentage
       series2-label: Resolved Within Target Timeframe
     - title: Street Sign Repair and Replace Service Requests
-      description: Total customer-initiated street sign repair and replace service requests and the percentage of those service requests that were resolved within the OOT's target timeframes
+      summary: Total customer-initiated street sign repair and replace service requests and the percentage of those service requests that were resolved within the OOT's target timeframes
+      description: 
       size: half
+      summary:
       department: DPW
       datasource: transportation_signs
       series-grouping: false
@@ -135,7 +145,8 @@
       series2-format: percentage
       series2-label: Resolved Within Target Timeframe
     - title: Street Markings Service Requests
-      description: Total customer-initiated street markings service requests and the percentage of those service requests that were resolved within the OOT's target timeframes
+      summary: Total customer-initiated street markings service requests and the percentage of those service requests that were resolved within the OOT's target timeframes
+      description: 
       size: half
       department: DPW
       datasource: transportation_customer_markings
@@ -149,7 +160,8 @@
       series2-format: percentage
       series2-label: Resolved Within Target Timeframe
     - title: Traffic Signal Repair Service Requests
-      description: Total customer-initiated traffic signal repair service requests and the percentage of those service requests that were resolved within the OOT's target timeframes
+      summary: Total customer-initiated traffic signal repair service requests and the percentage of those service requests that were resolved within the OOT's target timeframes
+      description: 
       size: half
       department: DPW
       datasource: transportation_customer_signals
@@ -164,7 +176,8 @@
       series2-label: Resolved Within Target Timeframe
 
     - title: Street Light Repair Service Requests
-      description: Total customer-initiated street light repair service requests and the percentage of those service requests that were resolved within the OOT's target timeframes
+      summary: Total customer-initiated street light repair service requests and the percentage of those service requests that were resolved within the OOT's target timeframes
+      description: 
       size: half
       department: DPW
       datasource: transportation_lights
@@ -179,7 +192,8 @@
       series2-label: Resolved Within Target Timeframe
 
     - title: Bridge Maintenance Service Requests
-      description: Total customer-initiated bridge maintenance service requests and the percentage of those service requests that were resolved within the OOT's target timeframes
+      summary: Total customer-initiated bridge maintenance service requests and the percentage of those service requests that were resolved within the OOT's target timeframes
+      description: 
       size: full
       department: DPW
       datasource: transportation_bridge
