--- a/_data/code-enforcement.yml
+++ b/_data/code-enforcement.yml
@@ -2,7 +2,8 @@
   group-description: Total customer-initiated service requests and the percentage of those service requests that were resolved within the Office's target timeframes
   charts:
     - title: ALL CUSTOMER SERVICE REQUESTS (TOTAL DEPARTMENT)
-      description: Total customer-initiated service requests and the percentage of those service requests that were resolved within the Office's target timeframes
+      summary: Total customer-initiated service requests (blue, left) and the percentage of those service requests that were resolved within the Office's target timeframes (red, right)
+      description: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point
       size: full
       department: CODE
       datasource: code_customer_service
@@ -16,7 +17,8 @@
       series2-format: percentage
       series2-label: Resolved Within Target Timeframe
     - title: Property Maintenance Inspection Service Requests
-      description: Total customer-initiated property maintenance inspection service requests and the percentage of those service requests that were resolved within the Office's target timeframes
+      summary: Total customer-initiated property maintenance inspection service requests (blue, left) and the percentage of those service requests that were resolved within the Office's target timeframes (red, right)
+      description: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point
       size: half
       department: CODE
       datasource: code_pm
@@ -30,7 +32,8 @@
       series2-format: percentage
       series2-label: Resolved Within Target Timeframe
     - title: Highly Hazardous Inspection Service Requests
-      description: Total customer-initiated highly hazardous inspection service requests and the percentage of those service requests that were resolved within the Office's target timeframes
+      summary: Total customer-initiated highly hazardous inspection service requests (blue, left) and the percentage of those service requests that were resolved within the Office's target timeframes (red, right)
+      description: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point
       size: half
       department: CODE
       datasource: code_hh
@@ -47,7 +50,8 @@
   group-description:
   charts:
     - title: Total Code Compliance Complaints and Backlog of Uninspected Complaints
-      description: Total number of complaints received from constituents as well as the total number of open complaints that are past-due for inspection
+      summary: Total number of complaints received from constituents (red) as well as the total number of open complaints that are past-due for inspection (blue)
+      description: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point
       size: full
       department: CODE
       datasource: code_compliance_complaints
