--- a/_data/public-works.yml
+++ b/_data/public-works.yml
@@ -1,5 +1,5 @@
 - group-title: Section I - Solid Waste Services Customer Service
-  group-description: Total customer-initiated service requests and the percentage of those service requests that were resolved within the SWS's target timeframes
+  group-description: Total customer-initiated service requests and the percentage of those service requests that were resolved within the SWS's target timeframes.
   charts:
   - title: All Customer Service Requests (All Solid Waste)
     summary: Total customer-initiated service requests (blue, left) and the percentage of those service requests that were resolved within the SWS's target timeframes (red, right)
