--- a/_data/parks-and-rec.yml
+++ b/_data/parks-and-rec.yml
@@ -18,7 +18,7 @@
       series2-label: Resolved Within Target Timeframe
 
     - title: Arborist Service Requests
-      summary: Total customer-initiated arborist inspection requests (blue, left) and the percentage of those service requests that were resolved within the Department's target timeframes (red, right)
+      summary: Tree Inspections are conducted by City of Atlanta's Parks and Recreation Department arborist for trees in the public right of way. Arborists evaluate trees to determine if they are dead, dying, diseased or hazardous; and require maintenance such as pruning or removal. <STRONG> The chart below shows the total customer-initiated arborist inspection requests (blue, left) and the percentage of those service requests that were resolved within the Department's target timeframes (red, right).</STRONG>
       description: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: half
       department: DPR
@@ -34,7 +34,7 @@
       series2-label: Resolved Within Target Timeframe
 
     - title: Forestry Service Requests
-      summary: Total customer-initiated forestry service requests (blue, left) and the percentage of those service requests that were resolved within the Department's target timeframes (red, right)
+      summary: Forestry is responsible for clearing tree obstructions from blocking sidewalks, streets and the public right of way. Forestry is responsible for removing down trees or tree debris from private property when it is determined that tree or branches fell from city property onto private property. <STRONG> The chart below shows total customer-initiated forestry service requests (blue, left) and the percentage of those service requests that were resolved within the Department's target timeframes (red, right). </STRONG>
       description: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: half
       department: DPR
@@ -50,7 +50,7 @@
       series2-label: Resolved Within Target Timeframe
 
     - title: Skilled Services Service Requests
-      summary: Total customer-initiated skilled services service requests (blue, left) and the percentage of those service requests that were resolved within the Department's target timeframes (red, right)
+      summary: When facilities and park assets are reported as in need of repair or maintenance, the skilled services team investigates the source of the problem and makes necessary changes. <STRONG> The chart below shows total customer-initiated skilled services service requests (blue, left) and the percentage of those service requests that were resolved within the Department's target timeframes (red, right). </STRONG>
       description: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: full
       department: DPR
@@ -69,7 +69,7 @@
   group-description:
   charts:
     - title: Scheduled Maintenance Completed on Schedule [Coming Soon]
-      summary: The percentage of scheduled park mowing, mulching, pruning, trash pickup that is completed on schedule
+      summary: Park Maintenance is handled by Park District Operations and is divided by quadrants: Northeast, Southeast, Northwest, and Southwest. Parks are maintained on a 10-day maintenance schedule. Parks maintenance includes mowing, blowing, trimming of shrubbery, and trash removal. <STRONG> The chart below shows the percentage of scheduled park mowing, mulching, pruning, trash pickup that is completed on schedule. </STRONG>
       description: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: full
       department: DPR
@@ -84,7 +84,7 @@
   group-description:
   charts:
     - title: Recreation Center Attendance [Coming Soon]
-      summary: Total recreation center visits and active recreation center memberships
+      summary: The Office of Recreation currently manages an array of facilities which include 33 recreation centers, indoor and outdoor pools, spray grounds, tennis courts, basketball courts, ball fields, playgrounds, and tennis centers. <STRONG> the charts below shows total recreation center visits and active recreation center memberships. </STRONG>
       description: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: full
       department: DPR
@@ -96,7 +96,7 @@
       series1-label: Total people
 
     - title: Youth Attendance and Programming
-      summary: Total youth being served by After School and Camp Best Friends (blue) and Recreation Center (red) Programming
+      summary: The department offers an array of diverse programs for youth that will improve academic and athletic performance while building character and sharpening social skills.<STRONG> The chart below shows the total youth being served by After School and Camp Best Friends (blue) and Recreation Center (red) Programming. </STRONG>
       description: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: full
       department: DPR
